@@ -26,11 +26,7 @@ public class EditSheep extends javax.swing.JFrame {
     private int healthflag1;
     private int farmerID;
     private MainMenu main;
-	
-    public EditSheep() {
-        initComponents();
-    }
-    
+
     public EditSheep(MainMenu previous, int farmerID, String sheepName, DatabaseHandler mHandler, Register mRegister){
         this.main = previous;
         this.mHandler = mHandler;
@@ -50,43 +46,7 @@ public class EditSheep extends javax.swing.JFrame {
         this.main.setFocusable(false);
         this.setLocationRelativeTo(this.main);
     }
-    
-    public EditSheep(MainMenu previous, DatabaseHandler mHandler, Register mRegister){
-        this.main = previous;
-        this.mHandler = mHandler;
-        this.mRegister = mRegister;
-        try {
-            this.sheepID = mHandler.getSheepByName(sheepName, mRegister.getFarmerID()).getId();
-        } catch (SQLException e) {
-            Error error = new Error(this, e.getMessage());
-            error.setVisible(true);
-        }
-        initComponents();
-        previous.dispose();
-    }
 
-    public EditSheep(String sheepName, DatabaseHandler mHandler, Register mRegister){
-        this.mHandler = mHandler;
-        this.mRegister = mRegister;
-        this.sheepName = sheepName;
-
-        try {
-            this.sheepID = mHandler.getSheepByName(sheepName, mRegister.getFarmerID()).getId();
-        } catch (SQLException e) {
-            Error error = new Error(this, e.getMessage());
-            error.setVisible(true);
-        }
-        initComponents();
-    }
-    
-
-    /**
-     * This method is called from within the constructor to initialize the form.
-     * WARNING: Do NOT modify this code. The content of this method is always
-     * regenerated by the Form Editor.
-     */
-    @SuppressWarnings("unchecked")
-    // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
     private void initComponents() {
 
         jTextField1 = new javax.swing.JTextField();
@@ -479,7 +439,6 @@ public class EditSheep extends javax.swing.JFrame {
             //Ingen endring i healthflag
         }
 
-
         if ((healthflag1 & FlagData.BLATUNGE) != (healthflag & FlagData.BLATUNGE)){
             if ((healthflag & FlagData.BLATUNGE) > 0){
                 healthflagAdd = FlagData.BLATUNGE;
@@ -687,43 +646,8 @@ public class EditSheep extends javax.swing.JFrame {
     private void jMenuItem1ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jMenuItem1ActionPerformed
     	MainMenu main = new MainMenu(this.main.main, this, farmerID, mHandler, mRegister);
     	main.setVisible(true);
-    }//GEN-LAST:event_jMenuItem1ActionPerformed
-
-    /**
-     * @param args the command line arguments
-     */
-    public static void main(String args[]) {
-        /* Set the Nimbus look and feel */
-        //<editor-fold defaultstate="collapsed" desc=" Look and feel setting code (optional) ">
-        /* If Nimbus (introduced in Java SE 6) is not available, stay with the default look and feel.
-         * For details see http://download.oracle.com/javase/tutorial/uiswing/lookandfeel/plaf.html 
-         */
-        try {
-            for (javax.swing.UIManager.LookAndFeelInfo info : javax.swing.UIManager.getInstalledLookAndFeels()) {
-                if ("Nimbus".equals(info.getName())) {
-                    javax.swing.UIManager.setLookAndFeel(info.getClassName());
-                    break;
-                }
-            }
-        } catch (ClassNotFoundException ex) {
-            java.util.logging.Logger.getLogger(EditSheep.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
-        } catch (InstantiationException ex) {
-            java.util.logging.Logger.getLogger(EditSheep.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
-        } catch (IllegalAccessException ex) {
-            java.util.logging.Logger.getLogger(EditSheep.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
-        } catch (javax.swing.UnsupportedLookAndFeelException ex) {
-            java.util.logging.Logger.getLogger(EditSheep.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
-        }
-        //</editor-fold>
-
-        /* Create and display the form */
-        java.awt.EventQueue.invokeLater(new Runnable() {
-            public void run() {
-                new EditSheep().setVisible(true);
-            }
-        });
     }
-    // Variables declaration - do not modify//GEN-BEGIN:variables
+
     private javax.swing.JRadioButton jRadioButton1;
     private javax.swing.JRadioButton jRadioButton2;
     private javax.swing.JTextField jTextField1;
